# Notes-Study

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
Code/BackEnd/PHP/: Test.php
Code/BackEnd/Ruby/: Test.rb
Code/BackEnd/Rust/: README.md  Test.rs
Code/BackEnd/Rust/Advanced/: concurrency.rs  error_handling.rs  traits.rs
Code/BackEnd/Rust/Fundamentals/: functions.rs  ownership.rs  structs_enums.rs  variables.rs
Code/BackEnd/Rust/PracticeCode/: collections.rs  iterators.rs
Code/BackEnd/Rust/Projects/calculator/: Cargo.toml  main.rs
Code/BackEnd/Rust/Projects/todo_app/: Cargo.toml  main.rs
Code/DataBase/: Test.sql
Code/FrontEnd(React)/src/Components/: Button.tsx
Code/FrontEnd(React)/src/Hooks/: useLocalStorage.ts
Code/FrontEnd(React)/src/Pages/: index.tsx
Code/FrontEnd(React)/src/Types/: index.ts
Code/FrontEnd/CSS/: Test.css
Code/FrontEnd/HTML/: Test.html
Code/FrontEnd/Projects/Porflio1/: index.html
Code/Python/Advanced(PY)/PracticeCode/: ListComprehensions.py
Code/Python/Basics(PY)/PracticeCode/: ControlFlow.py  Functions.py  Oop.py
Code/Python/Project(PY)/blog_system/: blog.py
PracticePages/: GIT_GUIDE.md  LANGUAGE_ROADMAPS.md  LEARNING_PATH.md  PRACTICE_PROJECTS.md
